--- a/menu.html
+++ b/menu.html
@@ -303,6 +303,12 @@
             </div>
     </div>
 
+    <script>
+    // Redirect to login if not logged in (for all pages except login/signup/forgotpswd)
+    if (!localStorage.getItem('isLoggedIn') && !['login.html','signup.html','forgotpswd.html'].includes(window.location.pathname.split('/').pop())) {
+      window.location.href = 'login.html';
+    }
+    </script>
     
     
 
