--- a/orders.html
+++ b/orders.html
@@ -23,6 +23,36 @@
             <li class="item"><a href="login.html">Login</a></li>
         </ul>
     </nav>
-  
+    <section>
+        <div class="order-history-container" style="max-width:700px;margin:40px auto;background:#fff;border-radius:12px;box-shadow:0 2px 8px #0001;padding:24px;">
+            <h2 style="text-align:center;margin-bottom:24px;">Order History</h2>
+            <div id="orderHistoryList" style="min-height:60px;"></div>
+        </div>
+    </section>
+    <script>
+    // Redirect to login if not logged in (for all pages except login/signup/forgotpswd)
+    if (!localStorage.getItem('isLoggedIn') && !['login.html','signup.html','forgotpswd.html'].includes(window.location.pathname.split('/').pop())) {
+      window.location.href = 'login.html';
+    }
+    function renderOrderHistory() {
+        let history = JSON.parse(localStorage.getItem('orderHistory') || '[]');
+        const list = document.getElementById('orderHistoryList');
+        if (!history.length) {
+            list.innerHTML = '<div style="text-align:center;color:#888;">No orders yet.</div>';
+            return;
+        }
+        list.innerHTML = history.map(order => `
+            <div style="border-bottom:1px solid #eee;padding:16px 0;">
+                <div><b>Order No.:</b> <span style='color:#2d6cdf;'>${order.orderNo}</span> <span style='float:right;color:#888;font-size:0.95em;'>${order.date}</span></div>
+                <div style="margin:8px 0 0 0;"><b>Items:</b></div>
+                <ul style="margin:0 0 8px 18px;padding:0;">
+                    ${order.items.map(item => `<li>${item.name} x ${item.qty} = Rs.${item.price * item.qty}</li>`).join('')}
+                </ul>
+                <div><b>Subtotal:</b> Rs.${order.subtotal} &nbsp; <b>Taxes:</b> Rs.${order.taxes} &nbsp; <b>Total:</b> <span style='color:#27ae60;'>Rs.${order.grandTotal}</span></div>
+            </div>
+        `).join('');
+    }
+    window.onload = renderOrderHistory;
+    </script>
 </body>
 </html>
